--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -9,11 +9,13 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Your Website Logo or Title</h1>
         <nav>
             <li><a class="category-box" href="#category1">Category 1</a></li>
             <li><a class="category-box" href="#category2">Category 2</a></li>
             <li><a class="category-box" href="#category3">Category 3</a></li>
+            <li><a class="category-box" href="#category4">Category 4</a></li>
+            <li><a class="category-box" href="#category4">Category 4</a></li>
+            <li><a class="category-box" href="#category4">Category 4</a></li>
             <li><a class="category-box" href="#category4">Category 4</a></li>
         </nav>
     </header>
