--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -10,13 +10,13 @@
     <!-- Header -->
     <header>
         <nav>
-            <li><a class="category-box" href="#category1">Category 1</a></li>
-            <li><a class="category-box" href="#category2">Category 2</a></li>
-            <li><a class="category-box" href="#category3">Category 3</a></li>
-            <li><a class="category-box" href="#category4">Category 4</a></li>
-            <li><a class="category-box" href="#category4">Category 4</a></li>
-            <li><a class="category-box" href="#category4">Category 4</a></li>
-            <li><a class="category-box" href="#category4">Category 4</a></li>
+            <li><a class="category-box" href="#category1">Food</a></li>
+            <li><a class="category-box" href="#category2">Clothing</a></li>
+            <li><a class="category-box" href="#category3">Textile</a></li>
+            <li><a class="category-box" href="#category4">Graphic Design Studio</a></li>
+            <li><a class="category-box" href="#category4">Book Store</a></li>
+            <li><a class="category-box" href="#category4">Pet Grooming</a></li>
+            <li><a class="category-box" href="#category4">Jewellery</a></li>
         </nav>
     </header>
 
