--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -17,6 +17,7 @@
             <li><a class="category-box" href="#category4">Book Store</a></li>
             <li><a class="category-box" href="#category4">Pet Grooming</a></li>
             <li><a class="category-box" href="#category4">Jewellery</a></li>
+            <li><a class="category-box" href="#category4">More...</a></li>
         </nav>
     </header>
 
