--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -11,16 +11,17 @@
     <!-- Header -->
     <header>
         <nav>
-            <li><a class="category-box" href="#category1"><i class="fas fa-utensils"></i> Food</a></li>
-            <li><a class="category-box" href="#category2"><i class="fas fa-tshirt"></i> Clothing</a></li>
-            <li><a class="category-box" href="#category3"><i class="fas fa-fabric"></i> Textile</a></li>
-            <li><a class="category-box" href="#category4"><i class="fas fa-paint-brush"></i> Graphic Design Studio</a></li>
-            <li><a class="category-box" href="#category5"><i class="fas fa-book"></i> Book Store</a></li>
-            <li><a class="category-box" href="#category6"><i class="fas fa-paw"></i> Pet Grooming</a></li>
-            <li><a class="category-box" href="#category7"><i class="fas fa-gem"></i> Jewellery</a></li>
-            <li><a class="category-box" href="#category8"><i class="fas fa-ellipsis-h"></i> More...</a></li>
+            <li><a class="category-box" href="#category1"><i class="fas fa-utensils fa-3x"></i><br> Food</a></li>
+            <li><a class="category-box" href="#category2"><i class="fas fa-tshirt fa-3x"></i><br> Clothing</a></li>
+            <li><a class="category-box" href="#category3"><i class="fas fa-fabric fa-3x"></i><br> Textile</a></li>
+            <li><a class="category-box" href="#category4"><i class="fas fa-paint-brush fa-3x"></i><br> Graphic Design Studio</a></li>
+            <li><a class="category-box" href="#category5"><i class="fas fa-book fa-3x"></i><br> Book Store</a></li>
+            <li><a class="category-box" href="#category6"><i class="fas fa-paw fa-3x"></i><br> Pet Grooming</a></li>
+            <li><a class="category-box" href="#category7"><i class="fas fa-gem fa-3x"></i><br> Jewellery</a></li>
+            <li><a class="category-box" href="#category8"><i class="fas fa-ellipsis-h fa-3x"></i><br> More...</a></li>
         </nav>
     </header>
+    
     
 
     <!-- Rest of your webpage content goes here -->
