--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -13,7 +13,7 @@
         <nav>
             <li><a class="category-box" href="#category1"><i class="fas fa-utensils fa-3x"></i><br> Food</a></li>
             <li><a class="category-box" href="#category2"><i class="fas fa-tshirt fa-3x"></i><br> Clothing</a></li>
-            <li><a class="category-box" href="#category3"><i class="fas fa-fabric fa-3x"></i><br> Textile</a></li>
+            <li><a class="category-box" href="#category3"><i class="fas fa-solid fa-rug"></i><br> Textile</a></li>
             <li><a class="category-box" href="#category4"><i class="fas fa-paint-brush fa-3x"></i><br> Graphic Design Studio</a></li>
             <li><a class="category-box" href="#category5"><i class="fas fa-book fa-3x"></i><br> Book Store</a></li>
             <li><a class="category-box" href="#category6"><i class="fas fa-paw fa-3x"></i><br> Pet Grooming</a></li>
