--- a/customerHome.html
+++ b/customerHome.html
@@ -38,7 +38,7 @@
       data-bs-toggle="offcanvas"
       data-bs-target="#offcanvasWithBothOptions"
       aria-controls="#offcanvasWithBothOptions">
-      <img src="IMG_20230927_111723_772.png" style="width: auto; height: 3rem;">
+      <img src="logo.png" style="width: auto; height: 3rem;">
     </button>
 
     <div
