--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Webpage Title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="CustomerPage.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <title>Document</title>
+
+    <script src="https://kit.fontawesome.com/8c264a0d2c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -14,16 +27,18 @@
             <li><a class="category-box" href="#category1"><i class="fas fa-utensils fa-3x"></i><br> Food</a></li>
             <li><a class="category-box" href="#category2"><i class="fas fa-tshirt fa-3x"></i><br> Clothing</a></li>
             <li><a class="category-box" href="#category3"><i class="fa-solid fa-rug fa-3x"></i><br> Textile</a></li>
-            <li><a class="category-box" href="#category4"><i class="fas fa-paint-brush fa-3x"></i><br> Graphic Design Studio</a></li>
+            <li><a class="category-box" href="#category4"><i class="fas fa-paint-brush fa-3x"></i><br> Graphic Design
+                    Studio</a></li>
             <li><a class="category-box" href="#category5"><i class="fas fa-book fa-3x"></i><br> Book Store</a></li>
             <li><a class="category-box" href="#category6"><i class="fas fa-paw fa-3x"></i><br> Pet Grooming</a></li>
             <li><a class="category-box" href="#category7"><i class="fas fa-gem fa-3x"></i><br> Jewellery</a></li>
             <li><a class="category-box" href="#category8"><i class="fas fa-ellipsis-h fa-3x"></i><br> More...</a></li>
         </nav>
     </header>
-    
-    
+
+
 
     <!-- Rest of your webpage content goes here -->
 </body>
+
 </html>
