--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -24,15 +24,15 @@
     <!-- Header -->
     <header>
         <nav>
-            <li><a class="category-box" href="#category1"><i class="fas fa-utensils fa-3x"></i><br> Food</a></li>
-            <li><a class="category-box" href="#category2"><i class="fas fa-tshirt fa-3x"></i><br> Clothing</a></li>
-            <li><a class="category-box" href="#category3"><i class="fa-solid fa-rug fa-3x"></i><br> Textile</a></li>
-            <li><a class="category-box" href="#category4"><i class="fas fa-paint-brush fa-3x"></i><br> Graphic Design
+            <li><a class="category-box" href="#category1"><img src="food.png"><br> Food</a></li>
+            <li><a class="category-box" href="#category2"><img src="food.png"><br> Clothing</a></li>
+            <li><a class="category-box" href="#category3"><img src="food.png"><br> Textile</a></li>
+            <li><a class="category-box" href="#category4"><img src="food.png"><br> Graphic Design
                     Studio</a></li>
-            <li><a class="category-box" href="#category5"><i class="fas fa-book fa-3x"></i><br> Book Store</a></li>
-            <li><a class="category-box" href="#category6"><i class="fas fa-paw fa-3x"></i><br> Pet Grooming</a></li>
-            <li><a class="category-box" href="#category7"><i class="fas fa-gem fa-3x"></i><br> Jewellery</a></li>
-            <li><a class="category-box" href="#category8"><i class="fas fa-ellipsis-h fa-3x"></i><br> More...</a></li>
+            <li><a class="category-box" href="#category5"><img src="food.png"><br> Book Store</a></li>
+            <li><a class="category-box" href="#category6"><img src="food.png"><br> Pet Grooming</a></li>
+            <li><a class="category-box" href="#category7"><img src="food.png"><br> Jewellery</a></li>
+            <li><a class="category-box" href="#category8"><img src="food.png"><br> More...</a></li>
         </nav>
     </header>
 
