--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -24,15 +24,15 @@
     <!-- Header -->
     <header>
         <nav>
-            <li><a class="category-box" href="#category1"><img src="food.png"><br> Food</a></li>
-            <li><a class="category-box" href="#category2"><img src="food.png"><br> Clothing</a></li>
-            <li><a class="category-box" href="#category3"><img src="food.png"><br> Textile</a></li>
-            <li><a class="category-box" href="#category4"><img src="food.png"><br> Graphic Design
+            <li><a class="category-box" href="#category1"><img src="food.png" width="auto" height="3rem"><br> Food</a></li>
+            <li><a class="category-box" href="#category2"><img src="food.png" width="auto" height="3rem"><br> Clothing</a></li>
+            <li><a class="category-box" href="#category3"><img src="food.png" width="auto" height="3rem"><br> Textile</a></li>
+            <li><a class="category-box" href="#category4"><img src="food.png" width="auto" height="3rem"><br> Graphic Design
                     Studio</a></li>
-            <li><a class="category-box" href="#category5"><img src="food.png"><br> Book Store</a></li>
-            <li><a class="category-box" href="#category6"><img src="food.png"><br> Pet Grooming</a></li>
-            <li><a class="category-box" href="#category7"><img src="food.png"><br> Jewellery</a></li>
-            <li><a class="category-box" href="#category8"><img src="food.png"><br> More...</a></li>
+            <li><a class="category-box" href="#category5"><img src="food.png" width="auto" height="3rem"><br> Book Store</a></li>
+            <li><a class="category-box" href="#category6"><img src="food.png" width="auto" height="3rem"><br> Pet Grooming</a></li>
+            <li><a class="category-box" href="#category7"><img src="food.png" width="auto" height="3rem"><br> Jewellery</a></li>
+            <li><a class="category-box" href="#category8"><img src="food.png" width="auto" height="3rem"><br> More...</a></li>
         </nav>
     </header>
 
