--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -25,13 +25,13 @@
     <header>
         <nav>
             <li><a class="category-box" href="#category1"><img src="food.png" width="auto" height="45px"><br> Food</a></li>
-            <li><a class="category-box" href="#category2"><img src="food.png" width="auto" height="45px"><br> Clothing</a></li>
-            <li><a class="category-box" href="#category3"><img src="food.png" width="auto" height="45px"><br> Textile</a></li>
-            <li><a class="category-box" href="#category4"><img src="food.png" width="auto" height="45px"><br> Graphic Design
+            <li><a class="category-box" href="#category2"><img src="cloth.png" width="auto" height="45px"><br> Clothing</a></li>
+            <li><a class="category-box" href="#category3"><img src="textile.png" width="auto" height="45px"><br> Textile</a></li>
+            <li><a class="category-box" href="#category4"><img src="graphicd.png" width="auto" height="45px"><br> Graphic Design
                     Studio</a></li>
-            <li><a class="category-box" href="#category5"><img src="food.png" width="auto" height="45px"><br> Book Store</a></li>
-            <li><a class="category-box" href="#category6"><img src="food.png" width="auto" height="45px"><br> Pet Grooming</a></li>
-            <li><a class="category-box" href="#category7"><img src="food.png" width="auto" height="45px"><br> Jewellery</a></li>
+            <li><a class="category-box" href="#category5"><img src="book.png" width="auto" height="45px"><br> Book Store</a></li>
+            <li><a class="category-box" href="#category6"><img src="pet.png" width="auto" height="45px"><br> Pet Grooming</a></li>
+            <li><a class="category-box" href="#category7"><img src="jewellery.png" width="auto" height="45px"><br> Jewellery</a></li>
             <li><a class="category-box" href="#category8"><img src="food.png" width="auto" height="45px"><br> More...</a></li>
         </nav>
     </header>
