--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -25,7 +25,7 @@
     <header>
         <nav>
             <li><a class="category-box" href="#category1"><img src="food.png" width="auto" height="45px"><br> Food</a></li>
-            <li><a class="category-box" href="#category2"><img src="cloth.png" width="auto" height="45px"><br> Clothing</a></li>
+            <li><a class="category-box" href="#category2"><img src="cloths.png" width="auto" height="45px"><br> Clothing</a></li>
             <li><a class="category-box" href="#category3"><img src="textile.png" width="auto" height="45px"><br> Textile</a></li>
             <li><a class="category-box" href="#category4"><img src="graphicd.png" width="auto" height="45px"><br> Graphic Design
                     Studio</a></li>
