--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -32,7 +32,7 @@
             <li><a class="category-box" href="#category5"><img src="book.png" width="auto" height="45px"><br> Book Store</a></li>
             <li><a class="category-box" href="#category6"><img src="pet.png" width="auto" height="45px"><br> Pet Grooming</a></li>
             <li><a class="category-box" href="#category7"><img src="jewellery.png" width="auto" height="45px"><br> Jewellery</a></li>
-            <li><a class="category-box" href="#category8"><img src="food.png" width="auto" height="45px"><br> More...</a></li>
+            <li><a class="category-box" href="#category8"><img src="more" width="auto" height="45px"><br> More...</a></li>
         </nav>
     </header>
 
