--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -24,15 +24,15 @@
     <!-- Header -->
     <header>
         <nav>
-            <li><a class="category-box" href="#category1"><img src="food.png" width="auto" height="45px"><br> Food</a></li>
-            <li><a class="category-box" href="#category2"><img src="cloths.png" width="auto" height="45px"><br> Clothing</a></li>
-            <li><a class="category-box" href="#category3"><img src="textile.png" width="auto" height="45px"><br> Textile</a></li>
-            <li><a class="category-box" href="#category4"><img src="graphicd.png" width="auto" height="45px"><br> Graphic Design
+            <li><a class="category-box" href="#category1"><img class="icon" src="food.png" width="auto" height="45px"><br> Food</a></li>
+            <li><a class="category-box" href="#category2"><img class="icon" src="cloths.png" width="auto" height="45px"><br> Clothing</a></li>
+            <li><a class="category-box" href="#category3"><img class="icon" src="textile.png" width="auto" height="45px"><br> Textile</a></li>
+            <li><a class="category-box" href="#category4"><img class="icon" src="graphicd.png" width="auto" height="45px"><br> Graphic Design
                     Studio</a></li>
-            <li><a class="category-box" href="#category5"><img src="book.png" width="auto" height="45px"><br> Book Store</a></li>
-            <li><a class="category-box" href="#category6"><img src="pet.png" width="auto" height="45px"><br> Pet Grooming</a></li>
-            <li><a class="category-box" href="#category7"><img src="jewellery.png" width="auto" height="45px"><br> Jewellery</a></li>
-            <li><a class="category-box" href="#category8"><img src="more.png" width="auto" height="45px"><br> More...</a></li>
+            <li><a class="category-box" href="#category5"><img class="icon" src="book.png" width="auto" height="45px"><br> Book Store</a></li>
+            <li><a class="category-box" href="#category6"><img class="icon" src="pet.png" width="auto" height="45px"><br> Pet Grooming</a></li>
+            <li><a class="category-box" href="#category7"><img class="icon" src="jewellery.png" width="auto" height="45px"><br> Jewellery</a></li>
+            <li><a class="category-box" href="#category8"><img class="icon" src="more.png" width="auto" height="45px"><br> More...</a></li>
         </nav>
     </header>
 
