--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -27,8 +27,7 @@
             <li> <div class="abc"><div><a class="category-box" href="#category1"><img class="icon" src="food.png" width="auto" height="45px"></div><br> <div> Food</div></a></div></li>
             <li><a class="category-box" href="#category2"><img class="icon" src="cloths.png" width="auto" height="45px"><br> Clothing</a></li>
             <li><a class="category-box" href="#category3"><img class="icon" src="textile.png" width="auto" height="45px"><br> Textile</a></li>
-            <li><a class="category-box" href="#category4"><img class="icon" src="graphicd.png" width="auto" height="45px"><br> Graphic Design
-                    Studio</a></li>
+            <li><a class="category-box" href="#category4"><img class="icon" src="graphicd.png" width="auto" height="45px"><br> Graphic Design Studio</a></li>
             <li><a class="category-box" href="#category5"><img class="icon" src="book.png" width="auto" height="45px"><br> Book Store</a></li>
             <li><a class="category-box" href="#category6"><img class="icon" src="pet.png" width="auto" height="45px"><br> Pet Grooming</a></li>
             <li><a class="category-box" href="#category7"><img class="icon" src="jewellery.png" width="auto" height="45px"><br> Jewellery</a></li>
