--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -23,8 +23,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav>
-            <li> <div class="abc"><div><a class="category-box" href="#category1"><img class="icon" src="food.png" width="auto" height="45px"></div> <div> Food</div></a></div></li>
+        <nav><a class="category-box" href="#category1"><img class="icon" src="food.png" width="auto" height="45px"> Food</a></li>
             <li><a class="category-box" href="#category2"><img class="icon" src="cloths.png" width="auto" height="45px"><br> Clothing</a></li>
             <li><a class="category-box" href="#category3"><img class="icon" src="textile.png" width="auto" height="45px"><br> Textile</a></li>
             <li><a class="category-box" href="#category4"><img class="icon" src="graphicd.png" width="auto" height="45px"><br> Graphic Design Studio</a></li>
@@ -34,7 +33,6 @@
             <li><a class="category-box" href="#category8"><img class="icon" src="more.png" width="auto" height="45px"><br> More...</a></li>
         </nav>
     </header>
-
 
 
     <!-- Rest of your webpage content goes here -->
