--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -26,7 +26,7 @@
         <nav>
             <li><a class="category-box" href="#category1"><p><img class="icon" src="food.png" width="auto" height="45px">
                 Food</p> </a></li>
-            <li><a class="category-box" href="#category2"><img class="icon" src="cloths.png" width="auto" height="45px"><br> Clothing</a></li>
+            <li><a class="category-box" href="#category2"><p><img class="icon" src="cloths.png" width="auto" height="45px"><br> Clothing</p></a></li>
             <li><a class="category-box" href="#category3"><img class="icon" src="textile.png" width="auto" height="45px"><br> Textile</a></li>
             <li><a class="category-box" href="#category4"><img class="icon" src="graphicd.png" width="auto" height="45px"><br> Graphic Design Studio</a></li>
             <li><a class="category-box" href="#category5"><img class="icon" src="book.png" width="auto" height="45px"><br> Book Store</a></li>
