--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -27,12 +27,12 @@
             <li><a class="category-box" href="#category1"><p><img class="icon" src="food.png" width="auto" height="45px">
                 Food</p> </a></li>
             <li><a class="category-box" href="#category2"><p><img class="icon" src="cloths.png" width="auto" height="45px">Clothing</p></a></li>
-            <li><a class="category-box" href="#category3"><img class="icon" src="textile.png" width="auto" height="45px"> Textile</a></li>
-            <li><a class="category-box" href="#category4"><img class="icon" src="graphicd.png" width="auto" height="45px"><br> Graphic Design Studio</a></li>
-            <li><a class="category-box" href="#category5"><img class="icon" src="book.png" width="auto" height="45px"><br> Book Store</a></li>
-            <li><a class="category-box" href="#category6"><img class="icon" src="pet.png" width="auto" height="45px"><br> Pet Grooming</a></li>
-            <li><a class="category-box" href="#category7"><img class="icon" src="jewellery.png" width="auto" height="45px"><br> Jewellery</a></li>
-            <li><a class="category-box" href="#category8"><img class="icon" src="more.png" width="auto" height="45px"><br> More...</a></li>
+            <li><a class="category-box" href="#category3"><p><img class="icon" src="textile.png" width="auto" height="45px"> Textile</p></a></li>
+            <li><a class="category-box" href="#category4"><p><img class="icon" src="graphicd.png" width="auto" height="45px">Graphic Design Studio</p></a></li>
+            <li><a class="category-box" href="#category5"><p><img class="icon" src="book.png" width="auto" height="45px">Book Store</p></a></li>
+            <li><a class="category-box" href="#category6"><p><img class="icon" src="pet.png" width="auto" height="45px">Pet Grooming</p></a></li>
+            <li><a class="category-box" href="#category7"><p><img class="icon" src="jewellery.png" width="auto" height="45px">Jewellery</p></a></li>
+            <li><a class="category-box" href="#category8"><p><img class="icon" src="more.png" width="auto" height="45px">More...</p></a></li>
         </nav>
     </header>
 
