--- a/CustomerPage.html
+++ b/CustomerPage.html
@@ -27,7 +27,7 @@
             <li><a class="category-box" href="#category1"><p class="categoryText"><img class="icon" src="food.png" width="auto" height="45px">
                 Food</p> </a></li>
             <li><a class="category-box" href="#category2"><p class="categoryText"><img class="icon" src="cloths.png" width="auto" height="45px">Clothing</p></a></li>
-            <li><a class="category-box" href="#category3"><p class="categoryText"><img class="icon" src="textile.png" width="auto" height="45px"> Textile</p> class="categoryText"</a></li>
+            <li><a class="category-box" href="#category3"><p class="categoryText"><img class="icon" src="textile.png" width="auto" height="45px"> Textile</p></a></li>
             <li><a class="category-box" href="#category4"><p class="categoryText"><img class="icon" src="graphicd.png" width="auto" height="45px">Graphic Design Studio</p></a></li>
             <li><a class="category-box" href="#category5"><p class="categoryText"><img class="icon" src="book.png" width="auto" height="45px">Book Store</p></a></li>
             <li><a class="category-box" href="#category6"><p class="categoryText"><img class="icon" src="pet.png" width="auto" height="45px">Pet Grooming</p></a></li>
