--- a/customerHome.html
+++ b/customerHome.html
@@ -91,17 +91,34 @@
 
   <header>
     <nav>
-        <li><a class="category-box" href="#category1"><p class="categoryText"><img class="icon" src="food.png" width="auto" height="45px">
-            Food</p> </a></li>
-        <li><a class="category-box" href="#category2"><p class="categoryText"><img class="icon" src="cloths.png" width="auto" height="45px">Clothing</p></a></li>
-        <li><a class="category-box" href="#category3"><p class="categoryText"><img class="icon" src="textile.png" width="auto" height="45px"> Textile</p></a></li>
-        <li><a class="category-box" href="#category4"><p class="categoryText"><img class="icon" src="graphicd.png" width="auto" height="45px">Graphic Design Studio</p></a></li>
-        <li><a class="category-box" href="#category5"><p class="categoryText"><img class="icon" src="book.png" width="auto" height="45px">Book Store</p></a></li>
-        <li><a class="category-box" href="#category6"><p class="categoryText"><img class="icon" src="pet.png" width="auto" height="45px">Pet Grooming</p></a></li>
-        <li><a class="category-box" href="#category7"><p class="categoryText"><img class="icon" src="jewellery.png" width="auto" height="45px">Jewellery</p></a></li>
-        <li><a class="category-box" href="#category8"><p class="categoryText"><img class="icon" src="more.png" width="auto" height="45px">More...</p></a></li>
+      <li><a class="category-box" href="#category1">
+          <p class="categoryText"><img class="icon" src="food.png" width="auto" height="45px">
+            Food</p>
+        </a></li>
+      <li><a class="category-box" href="#category2">
+          <p class="categoryText"><img class="icon" src="cloths.png" width="auto" height="45px">Clothing</p>
+        </a></li>
+      <li><a class="category-box" href="#category3">
+          <p class="categoryText"><img class="icon" src="textile.png" width="auto" height="45px"> Textile</p>
+        </a></li>
+      <li><a class="category-box" href="#category4">
+          <p class="categoryText"><img class="icon" src="graphicd.png" width="auto" height="45px">Graphic Design Studio
+          </p>
+        </a></li>
+      <li><a class="category-box" href="#category5">
+          <p class="categoryText"><img class="icon" src="book.png" width="auto" height="45px">Book Store</p>
+        </a></li>
+      <li><a class="category-box" href="#category6">
+          <p class="categoryText"><img class="icon" src="pet.png" width="auto" height="45px">Pet Grooming</p>
+        </a></li>
+      <li><a class="category-box" href="#category7">
+          <p class="categoryText"><img class="icon" src="jewellery.png" width="auto" height="45px">Jewellery</p>
+        </a></li>
+      <li><a class="category-box" href="#category8">
+          <p class="categoryText"><img class="icon" src="more.png" width="auto" height="45px">More...</p>
+        </a></li>
     </nav>
-</header>
+  </header>
 
   <!-- carousel starts here -->
 
