--- a/customerHome.html
+++ b/customerHome.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="CustomerPage.css">
+  <link rel="stylesheet" href="CustomerPage.css"> class="category-box2"
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
@@ -92,30 +92,30 @@
 
   <header>
     <nav>
-      <li><a class="category-box" href="#category1">
+      <li class="category-box2"><a class="category-box" href="#category1">
           <p class="categoryText"><img class="icon" src="food.png" width="auto" height="45px">
             Food</p>
         </a></li>
-      <li><a class="category-box" href="#category2">
+      <li class="category-box2"><a class="category-box" href="#category2">
           <p class="categoryText"><img class="icon" src="cloths.png" width="auto" height="45px">Clothing</p>
         </a></li>
-      <li><a class="category-box" href="#category3">
+      <li class="category-box2"><a class="category-box" href="#category3">
           <p class="categoryText"><img class="icon" src="textile.png" width="auto" height="45px"> Textile</p>
         </a></li>
-      <li><a class="category-box" href="#category4">
+      <li class="category-box2"><a class="category-box" href="#category4">
           <p class="categoryText"><img class="icon" src="graphicd.png" width="auto" height="45px">Graphic Design Studio
           </p>
         </a></li>
-      <li><a class="category-box" href="#category5">
+      <li class="category-box2"><a class="category-box" href="#category5">
           <p class="categoryText"><img class="icon" src="book.png" width="auto" height="45px">Book Store</p>
         </a></li>
-      <li><a class="category-box" href="#category6">
+      <li class="category-box2"><a class="category-box" href="#category6">
           <p class="categoryText"><img class="icon" src="pet.png" width="auto" height="45px">Pet Grooming</p>
         </a></li>
-      <li><a class="category-box" href="#category7">
+      <li class="category-box2"><a class="category-box" href="#category7">
           <p class="categoryText"><img class="icon" src="jewellery.png" width="auto" height="45px">Jewellery</p>
         </a></li>
-      <li><a class="category-box" href="#category8">
+      <li class="category-box2"><a class="category-box" href="#category8">
           <p class="categoryText"><img class="icon" src="more.png" width="auto" height="45px">More...</p>
         </a></li>
     </nav>
