--- a/customerHome.html
+++ b/customerHome.html
@@ -89,6 +89,10 @@
     </nav>
 
   </div>
+
+  <!-- navbar ends here -->
+
+  <!-- Categories starts here-->
   <header>  
     <nav>
       <li class="category-box2"><a class="category-box" href="#category1">
@@ -119,6 +123,7 @@
         </a></li>
     </nav>
   </header>
+  <!-- Categories ends here -->
 
   <!-- carousel starts here -->
 
