--- a/customerHome.html
+++ b/customerHome.html
@@ -163,7 +163,7 @@
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
                 role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Placeholder</title>
-                <img src="paneer.jpg" width="100%" height="100%"><text x="50%" y="50%" fill="#eceeef"
+                <rect width="100%" height="100%" fill="#55595c"><img src="paneer.jpg" width="100%" height="100%"></rect><text x="50%" y="50%" fill="#eceeef"
                   dy=".3em">Thumbnail</text>
               </svg>
               <div class="card-body">
