--- a/customerHome.html
+++ b/customerHome.html
@@ -39,7 +39,7 @@
       data-bs-toggle="offcanvas"
       data-bs-target="#offcanvasWithBothOptions"
       aria-controls="#offcanvasWithBothOptions">
-      <img src="logo.png" style="width: auto; height: 2.2rem;">
+      <img src="/IMG_20230927_111723_772.png" style="width: auto; height: 2.2rem;">
     </button>
 
     <div
