--- a/customerHome.html
+++ b/customerHome.html
@@ -32,7 +32,7 @@
       data-bs-toggle="offcanvas"
       data-bs-target="#offcanvasWithBothOptions"
       aria-controls="#offcanvasWithBothOptions">
-      <img src="logo.png" style="width: auto; height: 2.2rem;">
+      <img src="assets/logo.png" style="width: auto; height: 2.2rem;">
     </button>
 
     <div
