--- a/customerHome.html
+++ b/customerHome.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="Add to Cartport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="CustomerPage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>Market Connect </title>
 
     <script
       src="https://kit.fontawesome.com/8c264a0d2c.js"
@@ -153,21 +153,21 @@
 
   <!-- carousel starts here -->
 
-  <div id="carouselExample" class=" container-fluid carousel slide">
+  <div id="carouselExample" class=" container-lg carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
           src="/Assets/Carousel1.png"
-          class="d-block w-100" alt="..." style="height: 60vh; object-fit: cover;" />
+          class="d-block w-100" alt="..." style="height: 65vh; object-fit: cover;" />
       </div>
       <div class="carousel-item">
         <img
           src="/Assets/Carousel2.png"
-          class="d-block w-100" alt="..." style="height: 60vh; object-fit:cover;" />
+          class="d-block w-100" alt="..." style="height: 65vh; object-fit:cover;" />
       </div>
       <div class="carousel-item">
         <img src="/Assets/Carousel3.jpg" class="d-block w-100" alt="..." 
-        style="height: 60vh; object-fit:cover;"/>
+        style="height: 65vh; object-fit:cover;"/>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -194,10 +194,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -210,10 +210,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -226,10 +226,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -243,10 +243,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -259,10 +259,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -276,10 +276,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -293,10 +293,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -309,10 +309,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
@@ -325,10 +325,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
                   </div>
-                  <small class="text-body-secondary">9 mins</small>
+                  <small class="text-body-secondary">1299 Rs.</small>
                 </div>
               </div>
             </div>
