--- a/LandingPage.html
+++ b/LandingPage.html
@@ -150,26 +150,26 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
    
 
     <div class="container">
-        <div class="box">
+        <div class="box sub">
             <div>
-            <h2>Bussiness Owner</h2>
+            <h2>MERCHANTS</h2>
             <form action="#" method="post">
                 <div class="input-container">
                     <input type="text" placeholder="Email" required>
                     <input type="password" placeholder="Password" required>
-                    <button type="submit">Login</button>
+                    <button class="bus-btn"type="submit">Sign up</button>
                 </div>
             </form>
-            <p>Don't have an account? <a href="#">Sign up</a></p>
+            <p>Don't have an account? <a href="#">Login</a></p>
         </div>
     </div>
-        <div class="box ">
+        <div class="box">
            <div>
-                <h2>Customer</h2>
+                <h2>CUSTOMER</h2>
             <form action="#" method="post">
                 <input type="text" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
-                <button type="submit">Sign Up</button>
+                <button type="submit" style="background: white;">Sign Up</button>
             </form>
 
             <p>Already have an account? <a href="#">Login</a></p>
