--- a/customerHome.html
+++ b/customerHome.html
@@ -237,7 +237,7 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img src="assets/paneer.jpg" width="100%" height="100%">
+              <img src="assets/shoes.jpg" width="100%" height="100%">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -253,7 +253,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Assets/jacket.jpg" alt="">
+              <img src="Assets/smartphone.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -269,8 +269,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Assets/pizza.jpg" alt="">
-              </svg>
+              <img src="Assets/books.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -287,7 +286,7 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Assets/paneer.jpg" alt="">
+              <img src="Assets/juice.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
