--- a/LandingPage.html
+++ b/LandingPage.html
@@ -157,10 +157,10 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
                 <div class="input-container">
                     <input type="text" placeholder="Email" required>
                     <input type="password" placeholder="Password" required>
-                    <button class="bus-btn"type="submit">Sign up</button>
+                    <button class="bus-btn"type="submit">Login</button>
                 </div>
             </form>
-            <p>Don't have an account? <a href="#">Login</a></p>
+            <p>Don't have an account? <a href="#">Sign Up</a></p>
         </div>
     </div>
         <div class="box">
@@ -169,10 +169,9 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
             <form action="#" method="post">
                 <input type="text" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
-                <button type="submit" style="background: white;">Sign Up</button>
+                <button type="submit" style="background: white;">Login</button>
             </form>
-
-            <p>Already have an account? <a href="#">Login</a></p>
+            <p>Don't have an account? <a href="#">Sign Up</a></p>
            </div>
         </div>
     </div>
@@ -211,7 +210,8 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
 <section class="cta">
     <h1>Register your bussiness to connect
          <br>Anywhere From The World</h1>
-    <a href="contact.html" class="hero-btn">CONTACT US</a>
+    <a href="contact.html" class="hero-btn">
+    Contact Us</a>
 </section>
 
 <!----------footer------------>
