After the Destruction

--- a/customerHome.html
+++ b/customerHome.html
@@ -123,46 +123,47 @@
   <header>
     <nav>
       <li ><a class="category-box" href="#category1">
-          <p class="categoryText"><img class="icon" src="assets/food.png" width="auto" height="45px">Food</p>
+          <p class="categoryText"><img class="icon" src="assets/grocery.png" width="auto" height="45px">Food</p>
         </a></li>
       <li ><a class="category-box" href="#category2">
-          <p class="categoryText"><img class="icon" src="assets/cloths.png" width="auto" height="45px">Clothing</p>
+          <p class="categoryText"><img class="icon" src="assets/t-shirt.png" width="auto" height="45px">Clothing</p>
         </a></li>
       <li ><a class="category-box" href="#category3">
-          <p class="categoryText"><img class="icon" src="assets/textile.png" width="auto" height="45px"> Textile</p>
+          <p class="categoryText"><img class="icon" src="assets/sewing-machine.png" width="auto" height="45px"> Textile</p>
         </a></li>
-      <li ><a class="category-box" href="#category4">
-          <p class="categoryText"><img class="icon" src="assets/graphicd.png" width="auto" height="45px">Graphic  Studio
-          </p>
+        <li ><a class="category-box" href="#category7">
+          <p class="categoryText"><img class="icon" src="assets/electrical-appliances.png" width="auto" height="45px">Appliances</p>
         </a></li>
       <li ><a class="category-box" href="#category5">
-          <p class="categoryText"><img class="icon" src="assets/book.png" width="auto" height="45px">Book Store</p>
+          <p class="categoryText"><img class="icon" src="assets/agenda.png" width="auto" height="45px">Book Store</p>
         </a></li>
       <li ><a class="category-box" href="#category6">
-          <p class="categoryText"><img class="icon" src="assets/pet.png" width="auto" height="45px">Pet Grooming</p>
+          <p class="categoryText"><img class="icon" src="assets/pharmacy.png" width="auto" height="45px">Pharmacy</p>
         </a></li>
       <li ><a class="category-box" href="#category7">
-          <p class="categoryText"><img class="icon" src="assets/jewellery.png" width="auto" height="45px">Jewellery</p>
+          <p class="categoryText"><img class="icon" src="assets/jewelry.png" width="auto" height="45px">Jewellery</p>
         </a></li>
-      <li ><a class="category-box" href="#category8">
-          <p class="categoryText"><img class="icon" src="assets/more.png" width="auto" height="45px">More...</p>
+        <li ><a class="category-box" href="#category7">
+          <p class="categoryText"><img class="icon" src="assets/giftbox.png" width="auto" height="45px">Toys & Gifts</p>
+        </a></li>
+        <li ><a class="category-box" href="#category7">
+          <p class="categoryText"><img class="icon" src="assets/makeup.png" width="auto" height="45px">Beauty</p>
         </a></li>
     </nav>
   </header>
   <!-- Categories ends here -->
 
   <!-- carousel starts here -->
-
-  <div id="carouselExample" class=" container-lg carousel slide">
+    <div id="carouselExample" class="container-fluid carousel slide rounded-6">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="/Assets/Carousel1.png"
+          src="/Assets/POSTER2.jpg"
           class="d-block w-100" alt="..." style="height: 65vh; object-fit: cover;" />
       </div>
       <div class="carousel-item">
         <img
-          src="/Assets/Carousel2.png"
+          src="/Assets/POSTER1.jpg"
           class="d-block w-100" alt="..." style="height: 65vh; object-fit:cover;" />
       </div>
       <div class="carousel-item">
