--- a/customerHome.html
+++ b/customerHome.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+   <body>
     <!-- navbar starts here -->
 <div class="d-flex justify-content-center align-items-center">
 	 <div class="mx-4" id="logo">
@@ -355,6 +355,7 @@
       });
       </script>
   </body>
+ </div>
 </html>
 
   </main>
